# gpt5

./: gpt5  gpt5_cli.py  pyproject.toml
src/gptcli/: cli.py
